# graphics

./: .gitignore  Cargo.toml  NOTES.md  README.md  build.rs
shaders/: cull.comp  pbr.frag  pbr.vert  skybox.frag  skybox.vert  test.frag  test.vert
src/: base.rs  camera.rs  device_scene.rs  environment.rs  framebuffer.rs  lib.rs  main.rs  pipeline.rs  renderer.rs  renderpass.rs  scene.rs  scene_set.rs  scenery.rs  swapchain.rs  textures.rs  transfer.rs
src/pipeline/: cull.rs  mesh.rs  skybox.rs
src/transfer/: arena.rs  transaction.rs
