[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37", features = ["linked"]}
gltf = "1.1"
nalgebra = "0.32"
sdl2 = "0.35"
image = "0.24"

[build-dependencies]
shaderc = "0.8"
